2007-10-28  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimppdb.c (gimp_pdb_execute_procedure_by_name): also
	call va_end() in the error cases.

2007-10-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorscales.c (gimp_color_scales_set_channel):
	fixed range check.

2007-10-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_button_press): use small-checks for the
	navigation popup and inherit the check-type from the preview.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_text_buffer_load): close
	the file handle.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpmemsize.c (string_to_memsize): don't just crash
	right away if the impossible happens.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_resolution_source_callback):
	g_object_get_data() should always return a size-entry here. Return
	with a warning if it doesn't.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c (gimp_scanner_parse_color):
	initialize GimpRGB, just to be sure.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-handlers.c: removed code that syncs
	the padding color with the default values set in the preferences.
	Fixes bug #490785.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c (pnm_load_ascii): fixed handling of
	truncated ascii files. Fixes bug #490827.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c: formatting.
	(pnm_load_ascii): 

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mkgen.pl: set the svn:ignore property instead of
	writing a .cvsignore file.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.h (struct _GimpColorConfig):
	declared the fields as public so that they show up in the API
	documentation.

2007-10-27  Hans Breuer  <hans@breuer.org>
